# forecasting

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GIT_STATUS.md  LICENSE  MANIFEST.in  Makefile  PROJECT_STATUS.md  QUICKSTART.md  README.md  init_project.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  publish.yml
config/: default.yaml
docs/: API.md  CONTRIBUTING.md  INDEX.md  PROJECT_ASSESSMENT.md  PUBLISH.md  README.md  REFERENCES.md  SETUP_REMOTE.md  THEORY.md
examples/: README.md  advanced_ensemble.py  bangladesh_economy_forecast.py  basic_forecasting.py  competition_workflow.py  econometric_forecasting.py
notebooks/: README.md
src/: __init__.py
src/core/: __init__.py  base.py
src/data/: __init__.py  competition_loader.py  economic_data.py
src/evaluation/: __init__.py  metrics.py  statistical_tests.py
src/models/: __init__.py  bayesian.py  econometric.py  ensemble.py  ml.py  time_series.py
src/utils/: __init__.py  utils.py
src/visualization/: __init__.py  plotting.py
tests/: README.md  test_basic.py
